--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/CA-GUI-Programming.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.4.jar=..\\..\\..\\Downloads\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.12.jar=..\\..\\..\\Downloads\\mysql-connector-java-8.0.12.jar
+file.reference.jcalendar-1.4.jar=JARfiles\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.12.jar=JARfiles\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.12.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
